--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,48 @@ typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
 watchdog==6.0.0
+python-dotenv==1.0.1
+openai==0.27.11
+serpapi==0.2.2
+slack-sdk==3.25.3
+slack-bolt==1.28.1
+validators==0.20.0
+wordcloud==1.9.2
+zipp==3.20.0
+langchain==0.0.208
+faiss-cpu==1.8.4
+chromadb==0.3.28
+tiktoken==0.4.0
+unstructured==0.9.6
+unstructured[local-inference]==0.9.6
+pdf2image==1.16.3
+pytesseract==0.3.10
+Pillow==11.3.0
+transformers==4.44.2
+torch==2.2.0
+torchvision==0.15.1
+ftfy==6.1.1
+regex==2024.7.14
+sentencepiece==0.1.99
+accelerate==0.30.1
+bitsandbytes==0.40.2
+gradio==3.40.1
+invisible-watermark==0.1.5
+safetensors==0.4.3
+diffusers==0.26.5
+transformers==4.44.2
+optimum==1.13.3
+onnxruntime==1.15.1
+onnx==1.15.0
+openvino==2024.0.0
+openvino-dev==2024.0.0
+openvino-dev[onnx]==2024.0.0
+openvino-dev[onnx-tf]==2024.0.0
+tensorflow==2.15.5
+tensorflow-onnx==1.14.1
+tf2onnx==1.14.1
+onnx-tf==1.14.0
+protobuf==5.29.6
+onnxruntime==1.15.1
+onnx==1.15.0
+
