--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,43 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 altair==5.5.0
-attrs==25.4.0
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
 blinker==1.9.0
+build==1.2.2.post1
 cachetools==5.5.2
-certifi==2026.1.4
-charset-normalizer==3.4.4
-click==8.3.1
+certifi==2025.4.26
+charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==1.0.7
+click==8.1.8
 colorama==0.4.6
+coloredlogs==15.0.1
+dataclasses-json==0.6.7
+Deprecated==1.2.18
+distro==1.9.0
+docx2txt==0.9
+durationpy==0.9
+fastapi==0.115.9
+filelock==3.18.0
+flatbuffers==25.2.10
+frozenlist==1.6.0
+fsspec==2025.3.2
 gitdb==4.0.12
-GitPython==3.1.46
+GitPython==3.1.44
+google-auth==2.39.0
+google_search_results==2.4.2
+googleapis-common-protos==1.70.0
+greenlet==3.2.1
+grpcio==1.71.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
 idna==3.11
 Jinja2==3.1.6
 jsonschema==4.26.0
