--- a/requirements.txt
+++ b/requirements.txt
@@ -38,80 +38,113 @@ grpcio==1.71.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
-idna==3.11
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.30.2
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
 Jinja2==3.1.6
-jsonschema==4.26.0
-jsonschema-specifications==2025.9.1
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
+jiter==0.9.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+kubernetes==32.0.1
+langchain==0.3.24
+langchain-community==0.3.23
+langchain-core==0.3.56
+langchain-openai==0.3.14
+langchain-text-splitters==0.3.8
+langsmith==0.3.39
+lxml==5.4.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
 mdurl==0.1.2
-narwhals==2.16.0
-numpy==2.4.2
+mmh3==5.1.0
+mpmath==1.3.0
+multidict==6.4.3
+mypy_extensions==1.1.0
+narwhals==1.37.1
+numpy==2.2.5
+oauthlib==3.2.2
+onnxruntime==1.21.1
+openai==1.76.2
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp-proto-common==1.32.1
+opentelemetry-exporter-otlp-proto-grpc==1.32.1
+opentelemetry-instrumentation==0.53b1
+opentelemetry-instrumentation-asgi==0.53b1
+opentelemetry-instrumentation-fastapi==0.53b1
+opentelemetry-proto==1.32.1
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
+opentelemetry-util-http==0.53b1
+orjson==3.10.18
+overrides==7.7.0
 packaging==24.2
-pandas==2.3.3
-pillow==11.3.0
-protobuf==5.29.6
-pyarrow==23.0.0
+pandas==2.2.3
+pillow==11.2.1
+posthog==4.0.1
+propcache==0.3.1
+protobuf==5.29.4
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.4
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
 pydeck==0.9.1
-Pygments==2.19.2
+Pygments==2.19.1
+PyMuPDF==1.25.5
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.1.0
 pytz==2025.2
-referencing==0.37.0
-requests==2.32.5
-rich==13.9.4
-rpds-py==0.30.0
+PyYAML==6.0.2
+rank-bm25==0.2.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rpds-py==0.24.0
+rsa==4.9.1
+shellingham==1.5.4
 six==1.17.0
+slack_sdk==3.35.0
 smmap==5.0.2
-streamlit==1.41.1
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.45.3
+streamlit==1.45.0
+SudachiDict-full==20250129
+SudachiPy==0.6.10
+sympy==1.14.0
 tenacity==9.1.2
+tiktoken==0.9.0
+tokenizers==0.21.1
 toml==0.10.2
-tornado==6.5.4
-typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.3
+tornado==6.4.2
+tqdm==4.67.1
+typer==0.15.3
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.2
 watchdog==6.0.0
-python-dotenv==1.0.1
-openai==0.27.11
-serpapi==0.2.2
-slack-sdk==3.25.3
-slack-bolt==1.28.1
-validators==0.20.0
-wordcloud==1.9.2
-zipp==3.20.0
-langchain==0.0.208
-faiss-cpu==1.8.4
-chromadb==0.3.28
-tiktoken==0.4.0
-unstructured==0.9.6
-unstructured[local-inference]==0.9.6
-pdf2image==1.16.3
-pytesseract==0.3.10
-Pillow==11.3.0
-transformers==4.44.2
-torch==2.2.0
-torchvision==0.15.1
-ftfy==6.1.1
-regex==2024.7.14
-sentencepiece==0.1.99
-accelerate==0.30.1
-bitsandbytes==0.40.2
-gradio==3.40.1
-invisible-watermark==0.1.5
-safetensors==0.4.3
-diffusers==0.26.5
-transformers==4.44.2
-optimum==1.13.3
-onnxruntime==1.15.1
-onnx==1.15.0
-openvino==2024.0.0
-openvino-dev==2024.0.0
-openvino-dev[onnx]==2024.0.0
-openvino-dev[onnx-tf]==2024.0.0
-tensorflow==2.15.5
-tensorflow-onnx==1.14.1
-tf2onnx==1.14.1
-onnx-tf==1.14.0
-protobuf==5.29.6
-onnxruntime==1.15.1
-onnx==1.15.0
-
+watchfiles==1.0.5
+websocket-client==1.8.0
+websockets==15.0.1
+wrapt==1.17.2
+yarl==1.20.0
+zipp==3.21.0
+zstandard==0.23.0
