--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit
-langchain
-langchain-community
-langchain-openai
-langchain-text-splitters
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-openai>=0.0.5
+langchain-text-splitters>=0.0.1
 openai
 google-search-results
 python-dotenv
