--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ langchain-community==0.0.38
 langchain-openai==0.1.6
 langchain-text-splitters==0.0.1
 langchain-core==0.1.52
+sudachipy
+sudachidict-core
